# Onibo-converter

./: README  compileSetup  onibo-converter_0.3.0_amd64.deb  onibo-converter_0.3.0_i386.deb
onibo-converter_0.3.0/: CMakeLists.txt  READ ME
onibo-converter_0.3.0/dat_dir/GUI/: GUI.glade
onibo-converter_0.3.0/dat_dir/menu/: onibo-converter.desktop
onibo-converter_0.3.0/dat_dir/profils/: nokia5530
onibo-converter_0.3.0/dat_dir/script/: onibo-converter
onibo-converter_0.3.0/src_dir/: CMakeLists.txt  main.cpp  makros.h
onibo-converter_0.3.0/src_dir/grafika/: FilWin.cpp  FilWin.h  GUI.h  Gloader.cpp  Gloader.h  Indikator.cpp  Indikator.h  Name.cpp  Name.h  Okno.cpp  Okno.h  Vysledky.cpp  Vysledky.h  Vysuvatko.cpp  Vysuvatko.h  Zamok.cpp  Zamok.h  Zobrazovac.cpp  Zobrazovac.h
onibo-converter_0.3.0/src_dir/jadro/: Analyza.cpp  Analyza.h  Davkovac.cpp  Davkovac.h  Doplnky.cpp  Doplnky.h  File_Onb.cpp  File_Onb.h  Generator.cpp  Generator.h  Info.cpp  Info.h  Jadro.cpp  Jadro.h  Klik.cpp  Klik.h
onibo-converter_0.3.0/src_dir/prof/: Check_config_dir.cpp  Check_config_dir.h  File_convert.cpp  File_convert.h  File_inport.cpp  File_inport.h  File_load.cpp  File_load.h  Save_profil.cpp  Save_profil.h  Zberac.cpp  Zberac.h
onibo-converter_0.3.0/src_dir/video/: AudioKodeky.cpp  AudioKodeky.h  AudioPrekladac.cpp  AudioPrekladac.h  AudioVorbis.cpp  AudioVorbis.h  BasicKon.cpp  BasicKon.h  Information.cpp  Information.h  Kontainer.cpp  Kontainer.h  Loader.cpp  Loader.h  Profil.cpp  Profil.h  Type.cpp  Type.h  Udaje.cpp  Udaje.h  VideoKodeky.cpp  VideoKodeky.h  VideoPrekladac.cpp  VideoPrekladac.h
